refactor: :recycle: Updated comment implementation.
Changes comments table to have created_at and updated_at fields because that's the convention of laravel. Adjust the whole implementation around that. Also changed the delete comment endpoint to /comment/{id}/delete.
